<resources>
    <string name="app_name">AppOrderFood</string>
    <string name="tendangnhap">Tên đăng nhập</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="ngaysinh">Ngày sinh</string>
    <string name="sdt">Số điện thoại</string>
    <string name="dongy">Đồng ý</string>
    <string name="quaylai">Quay Lại</string>
    <string name="dangky">Đăng ký</string>
    <string name="loinhaptendangnhap">Vui lòng nhập tên đăng nhập !</string>
    <string name="loinhapmatkhau">Vui lòng nhập mật khẩu !</string>
    <string name="themthanhcong">Thêm thành công !</string>
    <string name="themthatbai">Thêm thất bại !</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="trangchu">Trang chủ</string>
    <string name="thucdon">Thực đơn</string>
    <string name="nhanvien">Nhân viên</string>
    <string name="thongke">Thống kê</string>
    <string name="dangxuat">Đăng Xuất</string>
    <string name="mo">Mở</string>
    <string name="dong">Đóng</string>
    <string name="thembanan">Thêm bàn ăn</string>
    <string name="tenbanan">Tên bàn ăn</string>
    <string name="themthucdon">Thên thực đơn</string>
    <string name="tenmonan">Tên món ăn</string>
    <string name="giatien">Giá tiền</string>
    <string name="banan">Bàn ăn</string>
    <string name="loaithucdon">Loại thực đơn</string>
    <string name="tenloai">Tên loại</string>
    <string name="vuilongnhapdulieu">Vui lòng nhập dữ liệu !</string>
    <string name="loithemmonan">Vui lòng nhập đầy đủ thông tin !</string>
    <string name="gia">Giá : </string>
    <string name="soluong">Số lượng</string>
    <string name="thanhtoan">Thanh toán</string>
    <string name="tongcong">Tổng cộng : </string>
    <string name="thanhtoanthanhcong">Thanh toán thành công !</string>
    <string name="loi">Lỗi !</string>
    <string name="sua">Sửa</string>
    <string name="xoa">Xóa</string>
    <string name="thoat">Thoát</string>
    <string name="xoathanhcong">Xóa thành công !</string>
    <string name="suathanhcong">Sữa thàng công !</string>
    <string name="themnhanvien">Thêm nhân viên !</string>
    <string name="capnhatnhanvien">Cập nhật nhân viên</string>

</resources>
