<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context=".DangKyActivity">


    <TextView
        android:id="@+id/txtTieuDeDangKy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lnKhungDangKy"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/size10dp"
        android:layout_marginTop="@dimen/size10dp"
        android:layout_marginEnd="@dimen/size10dp"
        android:layout_marginBottom="@dimen/size10dp"
        android:padding="@dimen/size10dp"
        android:text="@string/dangky"
        android:textSize="@dimen/size35sp"
        android:textStyle="bold"
        android:fontFamily="cursive"
        />

    <LinearLayout
        android:id="@+id/lnKhungDangKy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >

        <EditText
            android:id="@+id/edTenDangNhapDK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/tendangnhap"
            android:textColorHint="@color/colorGray"
            android:padding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="@dimen/size10dp"
            android:textColor="@color/black"
            android:singleLine="true"
            />

        <EditText
            android:id="@+id/edMatKhauDK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/matkhau"
            android:textColorHint="@color/colorGray"
            android:padding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:drawableLeft="@drawable/password"
            android:inputType="textPassword"

            android:drawablePadding="@dimen/size10dp"
            android:textColor="@color/black"
            android:singleLine="true"
            />

        <RadioGroup
            android:id="@+id/rgGioiTinh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <RadioButton
                android:id="@+id/rdNam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Nam" />
            <RadioButton
                android:id="@+id/rdNu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nữ" />
        </RadioGroup>
        <Spinner
            android:id="@+id/spinQuyen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </Spinner>
        <EditText
            android:id="@+id/edNgaySinhDK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/ngaysinh"
            android:textColorHint="@color/colorGray"
            android:padding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:drawableLeft="@android:drawable/ic_menu_my_calendar"
            android:drawablePadding="@dimen/size10dp"
            android:textColor="@color/black"
            android:singleLine="true"
            />

        <EditText
            android:id="@+id/edSDT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/sdt"
            android:textColorHint="@color/colorGray"
            android:padding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:drawableLeft="@drawable/ic_baseline_phone_24"
            android:drawablePadding="@dimen/size10dp"
            android:textColor="@color/black"
            android:singleLine="true"
            android:inputType="phone"
            android:maxLength="10"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/btnDongYDK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dongy"
                android:layout_weight="1"
                android:padding="@dimen/size10dp"
                android:layout_margin="@dimen/size10dp"
                android:backgroundTint="@color/colorRed"
                />

            <Button
                android:id="@+id/btnThoatDK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quaylai"
                android:layout_weight="1"
                android:padding="@dimen/size10dp"
                android:layout_margin="@dimen/size10dp"
                android:backgroundTint="@color/colorOrganButton"
                />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
