<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Gray">
    <LinearLayout
        android:id="@+id/InKhungDangNhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size30sp"
            android:fontFamily="sans-serif"
            android:text="@string/dangnhap"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black">
        </TextView>
        <ImageView
            android:layout_gravity="center"
            android:layout_width="@dimen/size150dp"
            android:layout_height="@dimen/size150dp"
            android:src="@drawable/logodangnhap"
            android:padding="@dimen/size10dp">

        </ImageView>
        <EditText
            android:id="@+id/edTenDangNhapDN"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size50dp"
            android:hint="@string/dangnhap"
            android:padding="@dimen/size10dp"
            android:textColor="@color/black"
            android:layout_margin="@dimen/size10dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="@dimen/size10dp"
            android:singleLine="true">
        </EditText>
        <EditText
            android:id="@+id/edMatKhauDN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/matkhau"
            android:padding="@dimen/size10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:layout_margin="@dimen/size10dp"
            android:background="@color/white"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="@dimen/size10dp"
            android:singleLine="true">
        </EditText>
        <Button
            android:id="@+id/btnDNDN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dangnhap"
            android:padding="@dimen/size10dp"
            android:textSize="20dp"
            android:layout_marginRight="@dimen/size10dp"
            android:layout_marginLeft="@dimen/size10dp"
            android:backgroundTint="@color/colorPrimary">
        </Button>
        <Button
            android:id="@+id/btnDKDN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dangky"
            android:textSize="20dp"
            android:layout_marginLeft="@dimen/size10dp"
            android:layout_marginRight="@dimen/size10dp"
            android:padding="@dimen/size10dp"
            android:backgroundTint="@color/teal_200">
        </Button>
    </LinearLayout>

</RelativeLayout>